kubernetes/overlays/homelab/immich/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: immich
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
