kubernetes/overlays/homelab/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: immich
  namespace: immich

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 2283
  tls:
    - hosts:
        - immich
